kubernetes/apps/selfhosted/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.erwanleboucher.dev
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      timeouts:
        request: 300s
